--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,27 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.2.RELEASE'
-        kotlinVersion = '1.0.0'
+        springBootVersion = '1.5.3.RELEASE'
+        kotlinVersion = '1.1.2-2'
     }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}"
     }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'spring-boot'
 apply plugin: 'idea'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'kotlin-jpa'
+apply plugin: 'org.springframework.boot'
 
 group 'kotlin-spring'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -28,26 +32,18 @@ repositories {
 
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.6.5-1")
-    compile("org.springframework:spring-instrument")
+    compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.8.0")
     compile("org.springframework.security:spring-security-crypto")
     compile("com.h2database:h2")
 
-    compile 'com.github.jknack:handlebars:4.0.4'
-    compile 'com.github.jknack:handlebars-helpers:4.0.4'
-    compile 'com.github.jknack:handlebars-jackson2:4.0.4'
-    compile 'com.github.jknack:handlebars-springmvc:4.0.4'
-    compile("org.webjars:swagger-ui:2.1.4")
+    runtime("org.webjars:swagger-ui:3.0.5")
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
-bootRun {
-    jvmArgs = ["-javaagent:libs/aspectjweaver-1.8.8.jar", "-javaagent:libs/spring-instrument-4.2.4.RELEASE.jar"]
-}
-
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.9'
+    gradleVersion = '3.1'
 }
